--- a/Resto.Net/Resto.Net/Resto.Net.csproj
+++ b/Resto.Net/Resto.Net/Resto.Net.csproj
@@ -9,21 +9,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Resources\Redondo_6.png" />
-    <None Remove="Resources\test.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="Resources\Redondo_6.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\test.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\RestoBarClases\RestoBarClases.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
